tests/ui/const-generics/generic_const_parameter_types/references-parent-generics.nofeat.stderr
error: `Self` is forbidden as the type of a const generic parameter
  --> $DIR/references-parent-generics.rs:7:25
   |
LL |     type Assoc<const N: Self>;
   |                         ^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: anonymous constants referencing generics are not yet supported
  --> $DIR/references-parent-generics.rs:14:21
   |
LL |     let x: T::Assoc<3>;
   |                     ^

error: aborting due to 2 previous errors

